# skills-ref-rs

./: Cargo.toml  README.md
openspec/changes/add-cargo-install-support/: proposal.md  tasks.md
openspec/changes/archive/2025-12-25-add-cargo-install-support/specs/installability/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/installability/: spec.md
