[package]
name = "skills-ref-rs"
repository = "https://github.com/BB-fat/skills-ref-rs"
version = "0.1.1"
edition = "2024"
description = "Rust implementation of agentskills library for validating, parsing, and managing Agent Skills"
license = "MIT"

[[bin]]
name = "skills-ref"
path = "src/main.rs"

[lib]
name = "skills_ref"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
